Set dropdown autowidth as false

--- a/modules/ui-primeng/src/dynamic-form-primeng.component.html
+++ b/modules/ui-primeng/src/dynamic-form-primeng.component.html
@@ -115,6 +115,7 @@
                         [dynamicId]="bindId && model.id"
                         [formControlName]="model.id"
                         [options]="model.options"
+                        [autoWidth]="false"
                         (onChange)="onValueChange($event)"></p-dropdown>
 
 
